welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:23: error: Unmatched closing brace '}' ignored here
  }
  ^BDRBuggle:34: error: Unmatched closing brace '}' ignored here
	}
        ^BDRBuggle:35: error: eof expected but '}' found.
}
^